controller/pkg/agentgateway/plugins/testdata/backendpolicy/multi-target-ref-backend-policy.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: discovery
  namespace: default
spec:
  parentRefs:
    - name: test
      namespace: default
  rules:
    - backendRefs:
      - group: agentgateway.dev
        kind: AgentgatewayBackend
        name: test1
      - group: agentgateway.dev
        kind: AgentgatewayBackend
        name: test2
      - group: agentgateway.dev
        kind: AgentgatewayBackend
        name: test3
      - group: agentgateway.dev
        kind: AgentgatewayBackend
        name: dummy-oauth
      matches:
        - path:
            type: PathPrefix
            value: /.well-known/oauth-authorization-server
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayBackend
metadata:
  name: dummy-oauth
  namespace: default
spec:
  mcp:
    targets:
      - name: mcp-target
        selector:
          namespaces:
            matchLabels:
              agentgateway.dev/never: dummy-value
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayBackend
metadata:
  name: test1
  namespace: default
spec:
  mcp:
    targets:
      - name: mcp-target
        static:
          host: mcp.test1.com
          port: 443
          path: /v1/mcp
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayBackend
metadata:
  name: test2
  namespace: default
spec:
  mcp:
    targets:
      - name: mcp-target
        static:
          host: mcp.test2.com
          port: 443
          path: /v1/mcp
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayBackend
metadata:
  name: test3
  namespace: default
spec:
  mcp:
    targets:
      - name: mcp-target
        static:
          host: mcp.test3.com
          port: 443
          path: /v1/mcp
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayBackend
metadata:
  name: test-jwks
  namespace: default
spec:
  static:
    host: login.test.com
    port: 443
  policies:
    tls: {}  # Enable TLS
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: mcp-auth
  namespace: default
spec:
  targetRefs:
    - group: agentgateway.dev
      kind: AgentgatewayBackend
      name: test1
    - group: agentgateway.dev
      kind: AgentgatewayBackend
      name: test2
    - group: agentgateway.dev
      kind: AgentgatewayBackend
      name: test3
    - group: agentgateway.dev
      kind: AgentgatewayBackend
      name: dummy-oauth
  backend:
    mcp:
      authentication:
        mode: Strict
        issuer: https://sts.windows.net/test-path/
        audiences:
          - api://test
        jwks:
          backendRef:
            name: test-jwks
            kind: AgentgatewayBackend
            group: agentgateway.dev
          jwksPath: test-path/discovery/v2.0/keys
        resourceMetadata:
          x-issuer: http://agentgateway.agentgateway-system.svc.cluster.local:7777/oauth-issuer
          authorizationServers:
            - https://mcp.k8s.test.info
          scopesSupported:
            - api://test/agentgateway
---
apiVersion: v1
data:
  jwks-store: '{"version":1,"requestKey":"53d36eb8b5c57a8f359d9af49de8306bb01dc8e6e6f2c7f1ae12832e998ee8b2","url":"https://login.test.com:443/test-path/discovery/v2.0/keys","fetchedAt":"0001-01-01T00:00:00Z","jwks":"{\"keys\":[{\"use\":\"enc\",\"kty\":\"RSA\",\"kid\":\"-VsQtem_T9-RdhVcv9hK3qVGqtrpLil5z1-ivX2StZY\",\"alg\":\"RSA-OAEP\",\"n\":\"klR5MxpPeHVd8cCtYvEL-9lcsv8gTaR_4MM053_XIhzJtq8kV3TY8Co35LD926QzCNam0qhZzckGn0W3S9hPkomNtXsbEoe5-kqY5BpfolUMj9ZfACz04QRqQIdecUGoHh4hAV07-UqHVUEwCVQNjVGZMzH [...]
kind: ConfigMap
metadata:
  labels:
    app.kubernetes.io/component: jwks-store
  name: jwks-store-df572417f38ef8a2ce4fb5e47e84af3622273f1827370c5d2a635e9e581df058
  namespace: agentgateway-system
---
# Output
output:
- gateway:
    Name: test
    Namespace: default
  resource:
    policy:
      backend:
        mcpAuthentication:
          audiences:
          - api://test
          issuer: https://sts.windows.net/test-path/
          jwksInline: '{"keys":[]}'
          mode: STRICT
          resourceMetadata:
            extra:
              authorizationServers:
              - https://mcp.k8s.test.info
              scopesSupported:
              - api://test/agentgateway
              x-issuer: http://agentgateway.agentgateway-system.svc.cluster.local:7777/oauth-issuer
      key: default/mcp-auth:mcp-authentication:default/dummy-oauth
      name:
        kind: AgentgatewayPolicy
        name: mcp-auth
        namespace: default
      target:
        backend:
          name: dummy-oauth
          namespace: default
- gateway:
    Name: test
    Namespace: default
  resource:
    policy:
      backend:
        mcpAuthentication:
          audiences:
          - api://test
          issuer: https://sts.windows.net/test-path/
          jwksInline: '{"keys":[]}'
          mode: STRICT
          resourceMetadata:
            extra:
              authorizationServers:
              - https://mcp.k8s.test.info
              scopesSupported:
              - api://test/agentgateway
              x-issuer: http://agentgateway.agentgateway-system.svc.cluster.local:7777/oauth-issuer
      key: default/mcp-auth:mcp-authentication:default/test1
      name:
        kind: AgentgatewayPolicy
        name: mcp-auth
        namespace: default
      target:
        backend:
          name: test1
          namespace: default
- gateway:
    Name: test
    Namespace: default
  resource:
    policy:
      backend:
        mcpAuthentication:
          audiences:
          - api://test
          issuer: https://sts.windows.net/test-path/
          jwksInline: '{"keys":[]}'
          mode: STRICT
          resourceMetadata:
            extra:
              authorizationServers:
              - https://mcp.k8s.test.info
              scopesSupported:
              - api://test/agentgateway
              x-issuer: http://agentgateway.agentgateway-system.svc.cluster.local:7777/oauth-issuer
      key: default/mcp-auth:mcp-authentication:default/test2
      name:
        kind: AgentgatewayPolicy
        name: mcp-auth
        namespace: default
      target:
        backend:
          name: test2
          namespace: default
- gateway:
    Name: test
    Namespace: default
  resource:
    policy:
      backend:
        mcpAuthentication:
          audiences:
          - api://test
          issuer: https://sts.windows.net/test-path/
          jwksInline: '{"keys":[]}'
          mode: STRICT
          resourceMetadata:
            extra:
              authorizationServers:
              - https://mcp.k8s.test.info
              scopesSupported:
              - api://test/agentgateway
              x-issuer: http://agentgateway.agentgateway-system.svc.cluster.local:7777/oauth-issuer
      key: default/mcp-auth:mcp-authentication:default/test3
      name:
        kind: AgentgatewayPolicy
        name: mcp-auth
        namespace: default
      target:
        backend:
          name: test3
          namespace: default
status:
- apiVersion: agentgateway.dev/v1alpha1
  kind: AgentgatewayPolicy
  metadata:
    name: mcp-auth
    namespace: default
  spec: null
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: test
        namespace: default
      conditions:
      - lastTransitionTime: fake
        message: jwks keyset for "https://login.test.com:443/test-path/discovery/v2.0/keys"
          isn't available (not yet fetched or fetch failed)
        reason: PartiallyValid
        status: "True"
        type: Accepted
      - lastTransitionTime: fake
        message: 'Policy is attached; part of its configuration was rejected: jwks
          keyset for "https://login.test.com:443/test-path/discovery/v2.0/keys" isn''t
          available (not yet fetched or fetch failed)'
        reason: Attached
        status: "True"
        type: Attached
      controllerName: agentgateway.dev/agentgateway
